--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
 <!-- Meta -->
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <!-- Styles -->
-<link href="" rel="stylesheet">
+<link href="./css/default.css" rel="stylesheet">
 </head>
 <body>
 
