Add boilerplate HTM5 bones

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,12 +4,13 @@
 <meta charset="utf-8">
 <title>{{ page.title }}</title>
 <!-- Meta -->
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
 <!-- Styles -->
-<link href="./css/default.css" rel="stylesheet">
+<link href="./css/normalize.css" rel="stylesheet" media="all">
+<link href="./css/default.css" rel="stylesheet" media="all">
+<!--[if lt IE 9]><script src="js/html5shiv-printshiv.js" media="all"></script><![endif]-->
 </head>
 <body>
-
 
 <main>
 {{ content }}
