Add responsive design

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,13 +11,11 @@
 <!--[if lt IE 9]><script src="js/html5shiv-printshiv.js" media="all"></script><![endif]-->
 </head>
 <body>
-
 <main>
+<section>
 {{ content }}
+</section>
 </main>
-
 <!-- Scripts -->
-{% include google-tag-manager.html %}
-
 </body>
 </html>
