Fix bugfix for IE11

--- a/css/default.scss
+++ b/css/default.scss
@@ -164,7 +164,7 @@ p {
   .portrait {
     order: -1;
     height: 100%;
-    background-color: transparent;
+    background: transparent;
     margin: 0 20px;
   }
 
