--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@ weights: [300, 400]
 <link href="./css/normalize.css" rel="stylesheet" media="all">
 <link href="./css/default.css" rel="stylesheet" media="all">
 <style>
-html { font-family: {{layout.font}}}, Tahoma, sans-serif;
+  html { font-family: {{layout.font}}, Tahoma, sans-serif; }
 </style>
 <!--[if lt IE 9]><script src="js/html5shiv-printshiv.js" media="all"></script><![endif]-->
 </head>
@@ -22,6 +22,10 @@ html { font-family: {{layout.font}}}, Tahoma, sans-serif;
 <main>
 <section>
 {{ content }}
+<footer>
+{% capture footer %}{% include footer.md %}{% endcapture %}
+{{ footer | markdownify }}
+</footer>
 </section>
 </main>
 <!-- Scripts -->
