Add custom normalize css

--- a/css/default.scss
+++ b/css/default.scss
@@ -267,9 +267,11 @@ footer p {
   a[href]:after { content: " (" attr(href) ") "; }
   a[href] {
       font-weight:bold;
-      text-decoration:underline;
+      text-decoration:none;
       color:#06c;
       border:none;
+      margin: 0;
+      padding: 0;
   }
   /* Don't show link destinations for JavaScript or internal links */ 
   a[href^="javascript:"]:after, a[href^="#"]:after { content:""; }
@@ -283,4 +285,8 @@ footer p {
   }
   
   figure img { border:1px solid #000; }
+
+  img.logotype {
+    filter: brightness(0);
+  }
 }
