Optimize use of colors and icons

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,8 +12,8 @@ weights: [300, 400]
 <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
 <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
 <link rel="manifest" href="/manifest.json">
-<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#184b81">
-<meta name="theme-color" content="#184b81">
+<link rel="mask-icon" href="/safari-pinned-tab.svg" color="{{ site.colors.primary }}">
+<meta name="theme-color" content="{{ site.colors.primary }}">
 <!-- Meta -->
 <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
 <!-- Styles -->
@@ -35,6 +35,7 @@ weights: [300, 400]
 </footer>
 </section>
 </main>
+
 <!-- Scripts -->
 </body>
 </html>
