--- a/css/my-normalize.scss
+++ b/css/my-normalize.scss
@@ -1,3 +1,6 @@
+---
+---
+
 /* My Normalize.css
 
 Based on normalize.css v4.2.0 | MIT License | github.com/necolas/normalize.css */
@@ -39,6 +42,7 @@ section,
 main {
   display: block;
 }
+
 
 
 
