--- a/css/default.scss
+++ b/css/default.scss
@@ -217,7 +217,7 @@ footer p {
   }
 
   h1 {
-    background: initial;
+    background: transparent;
     text-align: left;
     height: $mainBackgroundTopOffsetPx;
     font-size: $headingFontSize;
