--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@ weights: [300, 400]
 <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
 <!-- Styles -->
 <link href="https://fonts.googleapis.com/css?family={{ layout.font | uri_escape }}:{{ layout.weights | join: ','}}" rel="stylesheet">
-<link href="./css/default.css" media="all" rel="stylesheet">
+<link href="/css/default.css" media="all" rel="stylesheet">
 <style>
   html { font-family: {{layout.font}}, Tahoma, sans-serif; }
 </style>
