--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@ weights: [300, 400]
 <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
 <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
 <link rel="manifest" href="/manifest.json">
-<link rel="mask-icon" href="/safari-pinned-tab.svg" color="{{ site.colors.primary }}">
+<link rel="mask-icon" href="/safari-pinned-tab.svg" >
 <meta name="theme-color" content="{{ site.colors.primary }}">
 <!-- Meta -->
 <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
@@ -26,11 +26,11 @@ weights: [300, 400]
 <!--[if lt IE 9]><script src="js/html5shiv-printshiv.js" media="all"></script><![endif]-->
 </head>
 <body>
-<main role="main">
+<main>
 <section>
 {{ content }}
 {% include browser-upgrade.html %}
-<footer role="contentinfo">
+<footer>
 {% capture footer %}{% include footer.md %}{% endcapture %}
 {{ footer | markdownify }}
 </footer>
