--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,5 +38,8 @@ weights: [300, 400]
 </main>
 <!-- Scripts -->
 {% include google-tag-manager.html %}
+<script>
+function egg(){a.src="/images/manlike.png"}var a=document.getElementsByTagName("img")[0],n=0,d="Android";a.ondragover=function(a){a.preventDefault()},a.ondrop=function(a){a.preventDefault(),a.dataTransfer.getData("text").trim()==d&&egg()},a.onclick=function(){window.getSelection().toString().trim()==d&&n++,n>6&&egg()};
+</script>
 </body>
 </html>
