--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,14 +14,14 @@ weights: [300, 400]
 <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
 <link rel="manifest" href="/manifest.json">
 <link rel="mask-icon" href="/safari-pinned-tab.svg" >
-<meta name="theme-color" content="{{ site.colors.primary }}">
+<meta name="theme-color" content="{{ site.data.colors.primary }}">
 <!-- Meta -->
 <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
 <!-- Styles -->
 <link href="https://fonts.googleapis.com/css?family={{ layout.font | uri_escape }}:{{ layout.weights | join: ','}}" rel="stylesheet">
 <link href="/css/default.css" media="all" rel="stylesheet">
 <style>
-  html { font-family: {{layout.font}}, Tahoma, sans-serif; }
+  html { font-family: '{{layout.font}}', Tahoma, sans-serif; }
 </style>
 <!--[if lt IE 9]><script src="js/html5shiv-printshiv.js" media="all"></script><![endif]-->
 </head>
