--- a/css/default.scss
+++ b/css/default.scss
@@ -39,7 +39,7 @@ html {
 }
 
 body {
-  background-color: $nearWhite;
+  background-color: $primaryColor;
   color: $nearBlack;
   width: 100%;
   height: 100%;
