--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,7 +38,7 @@ weights: [300, 400]
 </section>
 </main>
 <!-- Scripts -->
-{% include google-tag-manager.html %}
+{% include analytics.html %}
 {% include egg.html %}
 </body>
 </html>
